[package]
authors = ["Matthew Bowers <mlbowers@mit.edu>", "Theo X. Olausson <theoxo@mit.edu>"]
description = "A library for defining domain specific languages in a polymorphic lambda calculus"
edition = "2018"
license = "MIT"
name = "lambdas"
repository = "https://github.com/mlb2251/lambdas"
version = "0.3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
once_cell = "1.16.0"
rustc-hash = "1.1.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0", features = ["preserve_order"]}
string_cache = "0.8.4"

# [profile.release]
# debug = true # for flamegraphs
